testing EB - RDS relationship

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@
 .vscode
 __pycache__
 
-# Elastic Beanstalk Files
-.elasticbeanstalk/*
-!.elasticbeanstalk/*.cfg.yml
-!.elasticbeanstalk/*.global.yml
+./Dockerfile
+.dockerignore
+.ebignore
+
+
