--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@ __pycache__
 .ebignore
 
 
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
